# Bug-Deduplication

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  S3M.sh  S3M_preprocess.sh  conda_env_pybind.yml  develop.py  lint.py  modules.sh  mypy.ini  pyproject.toml  setup_pybind.py  test.py  thesis_ml_results.sh  thesis_results.sh
cmake/: BoostTestHelpers.cmake
data/: bug_report_database.py  embed_map.py  preprocessing.py  report_dataset.py
dedup_mod_pybind/: cmp_func.cpp  cmp_func.hpp  imports.hpp
dedup_mod_pybind/method/: brodie_05.cpp  brodie_05.hpp  crash_graph.cpp  crash_graph.hpp  edit_distance.cpp  edit_distance.hpp  fast.cpp  fast.hpp  method.cpp  method.hpp  pdm.cpp  pdm.hpp  prefix_match.cpp  prefix_match.hpp  trace_sim.cpp  trace_sim.hpp
dedup_mod_pybind/util/: comparator.cpp  comparator.hpp  structures.hpp  utils.cpp  utils.hpp
experiments/: ml_test.py  s3m_trainer.py  test.py
models/: S3M.py
tests/data/: bug_report_database_test.py
tests/dedup_mod_pybind/: cmp_func.test.cpp
tests/dedup_mod_pybind/method/: brodie05.test.cpp  crash_graph.test.cpp  edit_distance_Dameray_Levenshtein.test.cpp  edit_distance_NeedlemanWunsch.test.cpp  fast.test.cpp  pdm.test.cpp  prefix_match.test.cpp  trace_sim.test.cpp
tests/dedup_mod_pybind/util/: comparator.test.cpp  filter.test.cpp  utils.test.cpp
tests/experiments/: scorer_test.py
trainers/: brodie05.py  facts.py  fast.py  s3m.py  tracesim.py  trainer.py
util/: data_util.py  jsontools.py
